--- a/Asteroids/rsrc.rc
+++ b/Asteroids/rsrc.rc
@@ -5,7 +5,7 @@
 #define FOGUETE  100
 
 // define icone e outros a serem utilizados
-ICONE ICON MOVEABLE PURE LOADONCALL DISCARDABLE "ico.ICO"
+ICONE ICON MOVEABLE PURE LOADONCALL DISCARDABLE "logo.ICO"
 
 // INDICA O BITMAP A SER UTILIZADO
 
