--- a/Asteroids/rsrc.rc
+++ b/Asteroids/rsrc.rc
@@ -4,12 +4,14 @@
 #define ICONE 500
 #define FOGUETE  100
 #define BIGASTEROID 208
+#define HOME 408
 
 // define icone e outros a serem utilizados
 ICONE ICON MOVEABLE PURE LOADONCALL DISCARDABLE "logo.ICO"
 
 // INDICA O BITMAP A SER UTILIZADO
 
+HOME BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "home.bmp"
 BIGASTEROID BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "asteroid_big.bmp"
 FOGUETE BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "rocket.bmp"
 
