adição dos bitmaps dos tiros

--- a/Asteroids/rsrc.rc
+++ b/Asteroids/rsrc.rc
@@ -5,6 +5,7 @@
 #define FOGUETE  100
 #define BIGASTEROID 208
 #define HOME 408
+#define UNIVERSO 409
 
 // define icone e outros a serem utilizados
 ICONE ICON MOVEABLE PURE LOADONCALL DISCARDABLE "logo.ICO"
@@ -12,6 +13,7 @@ ICONE ICON MOVEABLE PURE LOADONCALL DISCARDABLE "logo.ICO"
 // INDICA O BITMAP A SER UTILIZADO
 
 HOME BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "home.bmp"
+UNIVERSO BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "vialactea.bmp"
 BIGASTEROID BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "asteroid_big.bmp"
 FOGUETE BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "rocket.bmp"
 
