Mudança do codigo apropriando ao .inc + erros

--- a/Asteroids/rsrc.rc
+++ b/Asteroids/rsrc.rc
@@ -3,19 +3,43 @@
 
 #define ICONE 500
 #define FOGUETE  100
+#define NAVE 104
 #define BIGASTEROID 208
+#define MEDIUMASTEROID 209
+#define SMALLASTEROID 210
 #define HOME 408
 #define UNIVERSO 409
 
 // define icone e outros a serem utilizados
 ICONE ICON MOVEABLE PURE LOADONCALL DISCARDABLE "logo.ICO"
 
-// INDICA O BITMAP A SER UTILIZADO
+; Tiros
+100 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroDiagonalEsqDir.bmp"
+101 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroVertical.bmp"
+102 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroDiagonalDirEsq.bmp"
+103 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroHorizontal.bmp"
 
-HOME BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "home.bmp"
-UNIVERSO BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "vialactea.bmp"
-BIGASTEROID BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "asteroid_big.bmp"
-FOGUETE BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "rocket.bmp"
+104 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroDiagonalEsqDir2.bmp"
+105 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroVertical2.bmp"
+106 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroDiagonalDirEsq2.bmp"
+107 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroHorizontal2.bmp"
+
+; Foguete e Nave
+110 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "rocket.bmp"
+115 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "nave.bmp"
+
+; Asteroides
+120 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "asteroid_big2.bmp"
+121 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "asteroid_medium.bmp"
+122 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "asteroid_small.bmp"
+
+; Backgrounds
+130 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "home.bmp"
+131 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "vialactea.bmp"
+
+
+; Vida
+140 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "vida.bmp"
 
 
 
