--- a/Asteroids/rsrc.rc
+++ b/Asteroids/rsrc.rc
@@ -11,18 +11,18 @@
 #define UNIVERSO 409
 
 // define icone e outros a serem utilizados
-ICONE ICON MOVEABLE PURE LOADONCALL DISCARDABLE "logo.ICO"
+500 ICON MOVEABLE PURE LOADONCALL DISCARDABLE "logo.ICO"
 
 ; Tiros
-100 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroDiagonalEsqDir.bmp"
-101 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroVertical.bmp"
-102 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroDiagonalDirEsq.bmp"
-103 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroHorizontal.bmp"
+100 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE ".//tiros//tiroDiagonalEsqDir.bmp"
+101 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE ".//tiros//tiroVertical.bmp"
+102 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE ".//tiros//tiroDiagonalDirEsq.bmp"
+103 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE ".//tiros//tiroHorizontal.bmp"
 
-104 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroDiagonalEsqDir2.bmp"
-105 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroVertical2.bmp"
-106 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroDiagonalDirEsq2.bmp"
-107 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "..//tiroHorizontal2.bmp"
+104 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE ".//tiros//tiroDiagonalEsqDir2.bmp"
+105 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE ".//tiros//tiroVertical2.bmp"
+106 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE ".//tiros//tiroDiagonalDirEsq2.bmp"
+107 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE ".//tiros//tiroHorizontal2.bmp"
 
 ; Foguete e Nave
 110 BITMAP MOVEABLE PURE LOADONCALL DISCARDABLE "rocket.bmp"
